avancement, classe expérience faite, on peut séparer les requêtes selon le nombre de réponse qu'elles donnent et on peut tracer un histogramme